--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,12 +4,15 @@
     <h1><%= listTitle %></h1>
 </div>
 <div class="box">
-    <% for (let i = 0; i < newListItems.length; i++){ %>
-    <div class="item">
-        <input type="checkbox">
-        <p> <%= newListItems[i] %> </p>
-    </div>
-    <% } %>
+    <% newListItems.forEach(item => { %>
+    <form action="/delete" method="POST">
+        <div class="item">
+            <input type="checkbox" name="checkbox" value="<%= item._id %>" onchange="this.form.submit()">
+            <p> <%= item.name %> </p>
+        </div>
+        <input type="hidden" name="listName" value="<%= listTitle %>">
+    </form>
+    <% }) %>
 
     <form class="item" action="/" method="POST">
         <input type="text" name="newItem" placeholder="New Item" autocomplete="off" />
